# StableView

./: CHANGLOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  utils.rs
.cargo/: config.toml
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.yaml  config.yml
.github/workflows/: ci.yml  main.yml  release.yml
assets/: mb05_120x120.onnx
assets/model/: blazeface-320.onnx  data.json
assets/onnx_osx/: GIT_COMMIT_ID
assets/onnx_osx/lib/: libonnxruntime.dylib
assets/onnx_osx/lib/libonnxruntime.1.18.0.dylib.dSYM/Contents/: Info.plist
src/: camera.rs  consts.rs  face.rs  filter.rs  headtracker.rs  main.rs  model.rs  network.rs  pose.rs  process.rs  tddfa.rs  utils.rs  webcam.rs
src/enums/: crop_policy.rs  extreme.rs  message.rs  mod.rs
src/gui/: app.rs  mod.rs  style.rs  view.rs
src/structs/: app.rs  camera.rs  config.rs  data.rs  face.rs  headtracker.rs  mod.rs  network.rs  pose.rs  release.rs  state.rs  tddfa.rs
src/utils/: common.rs  config.rs  headpose.rs  image.rs  mod.rs  tddfa.rs  visualize.rs
wix/: License.rtf  main.wxs
