[package]
name = "StableView"
description = "A Head tracking application using only webcam"
version = "1.0.0"
edition = "2021"
authors = ["Shubhamai"]
publish = false # To prevent accidental publish on crates.io
license = "MIT"
repository = "https://github.com/Shubhamai/StableView"
homepage = "https://github.com/Shubhamai/StableView"
readme = "README.md"


[dependencies]
opencv =  {version = "0.88.5"} # 0.89.0
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.16.0"
rand = "0.8.5"
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-appender = "0.2.2"
nokhwa = {version = "0.10.3", features = ["input-msmf", "input-v4l"]}
confy = "0.6.1"
directories = "5.0.0"
iced = {version = "0.9.0", features = ["image", "smol"]}
iced_native = "0.10.3"
image = "0.24.6"
onnxruntime = {git = "https://github.com/nbigaouette/onnxruntime-rs"}
crossbeam-channel = "0.5.6"
anyhow = "1.0.70"
reqwest = { version = "0.11.6", features = ["blocking", "json"] }
version-compare = "0.1"
# opencv-binding-generator = "0.85.0"
# od_opencv = "0.1.5"
rust-faces =  {git = "https://github.com/Shubhamai/rust-faces"}

[profile.release]
debug = 0
strip = "symbols"
overflow-checks = false
panic = "abort"
opt-level = 3 # optimizing for speed
lto = "thin"
